Added animation for modal window

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container clearfix">
       <nav class="main-navigation">
         <ul>
-          <li class="current-page"><a href="#">Главная</a></li>
+          <li class="current-page"><a href="index.html">Главная</a></li>
           <li><a href="#">Информация</a></li>
           <li><a href="#">Новости</a></li>
           <li><a href="price.html">Прайс-лист</a></li>
@@ -133,7 +133,7 @@
 
   <!-- Login window -->
   <div class="modal-login">
-    <a href="#" class="modal-login-close"></a>
+    <div href="#" class="modal-login-close"></div>
     <h2 class="modal-login-title">Личный кабинет</h2>
     <p>Введите, пожалуйста, свой логин и пароль:</p>
     <form class="login-form" id="loginForm" action="/login" method="post">
