--- a/shop.html
+++ b/shop.html
@@ -153,7 +153,7 @@
 
   <!-- Login window -->
   <div class="modal-login">
-    <a href="#" class="modal-login-close"></a>
+    <div href="#" class="modal-login-close"></div>
     <h2 class="modal-login-title">Личный кабинет</h2>
     <p>Введите, пожалуйста, свой логин и пароль:</p>
     <form class="login-form" id="loginForm" action="/login" method="post">
@@ -166,5 +166,6 @@
     </form>
   </div>
 
+  <script src="js/script.js"></script>
 </body>
 </html>
